--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/images/Symbol_plain_bg_ver black.jpg"
-    />
+    <link rel="icon" type="image/png" href="/images/tab-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sundate</title>
   </head>
