--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/images/tab-logo.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sundate</title>
+    <title>Sundate Reservation</title>
+    <meta
+      name="description"
+      content="Sundate Reservation – Hệ thống đặt bàn online hiện đại giúp khách hàng dễ dàng đặt chỗ và nhà hàng quản lý hiệu quả."
+    />
+    <meta
+      name="keywords"
+      content="Sundate, đặt bàn, nhà hàng, reservation, booking online, quản lý nhà hàng"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://sundate-reservation.vercel.app" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Restaurant",
+        "name": "Sundate Reservation",
+        "url": "https://sundate-reservation.vercel.app",
+        "description": "Nền tảng đặt bàn trực tuyến hiện đại và thân thiện.",
+        "servesCuisine": "Vietnamese",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Hồ Chí Minh, Việt Nam"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
